# jumpfish

./: Makefile  README.md  pyproject.toml
jumpfish/: builtin.py  jumpfish.py  models.py  repo.py
