[tool.poetry]
name = "jumpfish"
version = "0.1.0"
description = "GNU-styled commands interpreter."
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
ruff = "^0.1.2"
coverage = "^7.3.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
